[package]
name = "robt"
version = "0.1.0"
description = "Read only, immutable Btree for indexing key,value"
authors = ["prataprc <prataprc@gmail.com>"]
documentation = "https://docs.rs/robt/"
repository = "https://github.com/bnclabs/robt"
keywords = ["btree", "data-structure", "storage", "index"]
categories = ["database", "datastructure", "concurrency"]
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
log = "0.4.11"
lazy_static = "1.2.0"
mkit = { path = "../mkit", version = "0.2.0" }
fs2 = "0.4.3"
