[package]
name = "robt"
version = "0.1.0"
description = "Read only, immutable Btree for indexing key,value"
authors = ["prataprc <prataprc@gmail.com>"]
documentation = "https://docs.rs/robt/"
repository = "https://github.com/bnclabs/robt"
keywords = ["btree", "data-structure", "storage", "index"]
categories = ["database", "datastructure", "concurrency"]
license = "MIT"
readme = "README.md"
edition = "2018"

[[bin]]
name = "robt"
required-features = ["robt"]

[dependencies]
log = "0.4.11"
lazy_static = "1.2.0"
mkit = { path = "../mkit", version = "0.3.0" }
fs2 = "0.4.3"

structopt = { version = "0.3.20", default-features = false, optional = true }

[dev-dependencies]
rand = { version = "0.7.3", features = ["small_rng"] }
arbitrary = { version = "0.4", features = ["derive"] }
ppom = { path = "../ppom", version = "0.5.0"}

[features]
robt = ["structopt"]
