[package]
name = "robt"
version = "0.2.0"
description = "Read only, immutable Btree for indexing key,value"
repository = "https://github.com/bnclabs/robt"
documentation = "https://docs.rs/robt/"
keywords = ["btree", "data-structures", "storage", "index"]
categories = ["database", "data-structures", "concurrency"]
authors = ["prataprc <prataprc@gmail.com>"]
license = "MIT"
edition = "2018"
readme = "README.md"

[profile.release]
debug = true

[profile.bench]
debug = true

[[bin]]
name = "robt"
required-features = ["robt"]

[dependencies]
log = "0.4.11"
lazy_static = "1.2.0"
mkit = { path = "../../_archive/mkit", version = "0.4.0" }
fs2 = "0.4.3"

structopt = { version = "0.3.20", default-features = false, optional = true }

[dev-dependencies]
rand = { version = "0.8.4", features = ["std_rng"] }
arbitrary = { version = "0.4", features = ["derive"] }
ppom = { path = "../ppom", version = "0.7.0"}
xorfilter-rs = { path = "../../dbkit/xorfilter", version = "0.5.1"}

[features]
robt = ["structopt"]
